// Vitest Snapshot v1

exports[`scale width and height > when passed per icon 1`] = `
{
  ".i-test-icons-colored": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='%23fff'/%3E%3C/svg%3E\\")",
    "background": "var(--tw-plugin-icons-url) no-repeat",
    "backgroundColor": "transparent",
    "backgroundSize": "100% 100%",
    "height": "2em",
    "width": "2em",
  },
  ".i-test-icons-colorless": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='currentColor'/%3E%3C/svg%3E\\")",
    "-webkit-mask": "var(--tw-plugin-icons-url) no-repeat",
    "-webkit-mask-size": "100% 100%",
    "backgroundColor": "currentColor",
    "height": "3em",
    "mask": "var(--tw-plugin-icons-url) no-repeat",
    "maskSize": "100% 100%",
    "width": "3em",
  },
}
`;

exports[`scale width and height > when passed per icon set 1`] = `
{
  ".i-test-icons-colored": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='%23fff'/%3E%3C/svg%3E\\")",
    "background": "var(--tw-plugin-icons-url) no-repeat",
    "backgroundColor": "transparent",
    "backgroundSize": "100% 100%",
    "height": "1.5em",
    "width": "1.5em",
  },
  ".i-test-icons-colorless": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='currentColor'/%3E%3C/svg%3E\\")",
    "-webkit-mask": "var(--tw-plugin-icons-url) no-repeat",
    "-webkit-mask-size": "100% 100%",
    "backgroundColor": "currentColor",
    "height": "1.5em",
    "mask": "var(--tw-plugin-icons-url) no-repeat",
    "maskSize": "100% 100%",
    "width": "1.5em",
  },
}
`;

exports[`use addComponent when not forced otherwise 1`] = `
{
  ".i-test-icons-colored": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='%23fff'/%3E%3C/svg%3E\\")",
    "background": "var(--tw-plugin-icons-url) no-repeat",
    "backgroundColor": "transparent",
    "backgroundSize": "100% 100%",
    "height": "1em",
    "width": "1em",
  },
  ".i-test-icons-colorless": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='currentColor'/%3E%3C/svg%3E\\")",
    "-webkit-mask": "var(--tw-plugin-icons-url) no-repeat",
    "-webkit-mask-size": "100% 100%",
    "backgroundColor": "currentColor",
    "height": "1em",
    "mask": "var(--tw-plugin-icons-url) no-repeat",
    "maskSize": "100% 100%",
    "width": "1em",
  },
}
`;

exports[`use matchComponents with the ?bg query parameter 1`] = `
{
  "bg-test-icons-colored": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='%23fff'/%3E%3C/svg%3E\\")",
    "background": "var(--tw-plugin-icons-url) no-repeat",
    "backgroundColor": "transparent",
    "backgroundSize": "100% 100%",
    "height": "1em",
    "width": "1em",
  },
  "bg-test-icons-colorless": {
    "--tw-plugin-icons-url": "url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='1' fill='red'/%3E%3C/svg%3E\\")",
    "background": "var(--tw-plugin-icons-url) no-repeat",
    "backgroundColor": "transparent",
    "backgroundSize": "100% 100%",
    "height": "1em",
    "width": "1em",
  },
}
`;
